--- a/assets/section-about-me.css
+++ b/assets/section-about-me.css
@@ -4,6 +4,7 @@
     background-color: black;
     padding: 40px 30px;
     margin-top: 20px;
+    max-width: 100%;
 }
 
 .am-text {
@@ -49,5 +50,19 @@
   }
   100% {
     opacity: 0;
+  }
+}
+
+@media screen and (max-width: 749px) {
+  .about-me-wrapper {
+    flex-direction: column;
+  }
+  .am-photo img {
+    max-width: 100%;
+    width: 200px;
+    border-radius: 40px;
+  }
+  .am-description {
+    margin-left: 0px;
   }
 }
